# gex-lead-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: sms_distributor.py
docs/: audit_explains.md  conceitual_parte_a.md  conceitual_parte_b.md  evidencia_banco.md  explicacao_tecnica.md
source/: main.py
source/core/: config.py
source/features/debug/: benchmark.py  repository.py  router.py  service.py
source/features/distribution/: repository.py  sms_worker.py  webhook_site.py
source/features/leads/: repository.py  worker.py
source/features/webhooks/: decryption.py  repository.py  router.py  schemas.py  service.py
source/shared/: config.py  db.py  rabbitmq.py  structured_logging.py  tables.py
source/workers/: lead_worker.py
sql/: 001_create_tables.sql  002_indexes.sql  003_stored_procs.sql  audit_queries.sql
tests/: test_config.py  test_db.py  test_debug.py  test_grummer_decryption.py  test_health.py  test_lead_repository.py  test_lead_worker.py  test_sms_worker.py  test_webhook_service.py  test_webhook_site.py
