[project]
name = "gex-lead-pipeline"
version = "0.1.0"
description = "Technical test backend pipeline for webhook processing"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "pika>=1.3.0",
    "cryptography>=43.0.0",
    "requests>=2.32.0",
    "watchfiles>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["source*"]
exclude = ["sql*", "scripts*", "tests*", "docs*"]
